Update to MC 1.19.2