@@ -2,7 +2,6 @@ package fi.dy.masa.tellme.command.argument;
 
 import java.util.Arrays;
 import java.util.concurrent.CompletableFuture;
-import java.util.stream.Collectors;
 import com.google.common.collect.ImmutableList;
 import com.mojang.brigadier.StringReader;
 import com.mojang.brigadier.arguments.ArgumentType;
@@ -11,14 +10,16 @@ import com.mojang.brigadier.exceptions.CommandSyntaxException;
 import com.mojang.brigadier.exceptions.SimpleCommandExceptionType;
 import com.mojang.brigadier.suggestion.Suggestions;
 import com.mojang.brigadier.suggestion.SuggestionsBuilder;
-import net.minecraft.network.chat.TextComponent;
+
+import net.minecraft.network.chat.Component;
+
 import fi.dy.masa.tellme.command.CommandUtils;
 import fi.dy.masa.tellme.command.CommandUtils.OutputType;
 
 public class OutputTypeArgument implements ArgumentType<OutputType>
 {
-    private static final ImmutableList<String> TYPE_ARGUMENTS = ImmutableList.copyOf(Arrays.asList(OutputType.values()).stream().map((type) -> type.getArgument()).collect(Collectors.toList()));
-    private static final SimpleCommandExceptionType EMPTY_TYPE = new SimpleCommandExceptionType(new TextComponent("No output type given"));
+    private static final ImmutableList<String> TYPE_ARGUMENTS = ImmutableList.copyOf(Arrays.stream(OutputType.values()).map(OutputType::getArgument).toList());
+    private static final SimpleCommandExceptionType EMPTY_TYPE = new SimpleCommandExceptionType(Component.literal("No output type given"));
 
     public static OutputTypeArgument create()
     {
